--- a/index.html
+++ b/index.html
@@ -18,15 +18,43 @@
         <center>
             <div class="btn btn-primary heading">
                 <h3>AI PING PONG GAME</h3>
-                <button class="btn btn-primary" data-toggle="modal" data-target="myModal">INSTRUCTIONS</button>
+                <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">INSTRUCTIONS</button>
             </div>
 
             <button class="btn btn-success" onclick="startGame()" id="start">Start game</button>
             <br><br>
             <h3 id="status"></h3>
             <br><br>
-            <div id="canvas" class="btn btn-warning"></div>
+            <div id="canvas"></div>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <button class="btn btn-warning" onclick="restartGame()" id="restart">Restart game</button>
+            <br><br>
+
+            <div id="myModal" class="modal fade">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <button class="close" data-dismiss="modal">&times;</button>
+                      <h4>Instructions</h4>
+                    </div>
+        
+                    <div class="modal-body">
+                        <ol>
+                            <li>First keep your laptop screen straight</li>
+                            <li>Move yourself approximately 3-4 feet away from the laptop</li>
+                            <li>Move your right wrist in an ascending and decending manner, a red dot should appear on your right wrist</li>
+                            <li>Now press the play button, and again move yourself 3-4 feet away from laptop</li>
+                            <li>The red paddel is your paddel, that will move as per the movement of your right wrist</li>
+                          </ol>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </center>
+
+        <div class="copy_right_footer">
+            Developed By - Saksham Singh
+          </div>
 
         <script src="main.js"></script>
     </body>
